# Skeleton

./: .gitignore  CMakeLists.txt  MainWindow.cxx  MainWindow.h  MainWindow.ui  README.md  Release.md  Skeleton.cxx  Skeleton.h  Skeleton.pro  SyntaxPartisaner.cxx  SyntaxPartisaner.h  Syntaxhighlighter.cxx  Syntaxhighlighter.h  Themes.cxx  Themes.h  images.qrc  main.cxx  stylesheet.qrc
qss/: Aqua.qss  MacOS.qss  Obit.qss  SpyBot.qss  black.qss  bubble.qss  default.qss  transparent.qss  white.qss
